{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 816,
  "lineage": "c8a4005e-8118-8ffa-d607-c119db31490c",
  "resources": [
    {
      "module": "module.location_us2w",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "web_server_lb",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "load_balancer_rules": [
                  "/subscriptions/791e8523-837f-4d36-bf14-6bee2c344ef2/resourceGroups/web-rg-us2w/providers/Microsoft.Network/loadBalancers/web-server-us2w-lb/loadBalancingRules/web-server-us2w-lb-http-rul"
                ],
                "name": "web-server-us2w-lb-frontend-ip",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/791e8523-837f-4d36-bf14-6bee2c344ef2/resourceGroups/web-rg-us2w/providers/Microsoft.Network/publicIPAddresses/web-server-us2w-public-ip"
              }
            ],
            "id": "/subscriptions/791e8523-837f-4d36-bf14-6bee2c344ef2/resourceGroups/web-rg-us2w/providers/Microsoft.Network/loadBalancers/web-server-us2w-lb",
            "location": "westus2",
            "name": "web-server-us2w-lb",
            "resource_group_name": "web-rg-us2w",
            "sku": "Basic"
          },
          "dependencies": [
            "module.location_us2w.azurerm_public_ip.web_server_lb_public_ip",
            "module.location_us2w.azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "module": "module.location_us2w",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "web_server_lb_backend_pool",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/791e8523-837f-4d36-bf14-6bee2c344ef2/resourceGroups/web-rg-us2w/providers/Microsoft.Compute/virtualMachineScaleSets/web-server-us2w-scale-set/virtualMachines/0/networkInterfaces/web_server_network_profile/ipConfigurations/web",
              "/subscriptions/791e8523-837f-4d36-bf14-6bee2c344ef2/resourceGroups/web-rg-us2w/providers/Microsoft.Compute/virtualMachineScaleSets/web-server-us2w-scale-set/virtualMachines/2/networkInterfaces/web_server_network_profile/ipConfigurations/web"
            ],
            "id": "/subscriptions/791e8523-837f-4d36-bf14-6bee2c344ef2/resourceGroups/web-rg-us2w/providers/Microsoft.Network/loadBalancers/web-server-us2w-lb/backendAddressPools/web-server-us2w-lb-backend-pool",
            "load_balancing_rules": [
              "/subscriptions/791e8523-837f-4d36-bf14-6bee2c344ef2/resourceGroups/web-rg-us2w/providers/Microsoft.Network/loadBalancers/web-server-us2w-lb/loadBalancingRules/web-server-us2w-lb-http-rul"
            ],
            "loadbalancer_id": "/subscriptions/791e8523-837f-4d36-bf14-6bee2c344ef2/resourceGroups/web-rg-us2w/providers/Microsoft.Network/loadBalancers/web-server-us2w-lb",
            "name": "web-server-us2w-lb-backend-pool",
            "resource_group_name": "web-rg-us2w"
          },
          "dependencies": [
            "module.location_us2w.azurerm_lb.web_server_lb",
            "module.location_us2w.azurerm_public_ip.web_server_lb_public_ip",
            "module.location_us2w.azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "module": "module.location_us2w",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "web_server_lb_http_probe",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/791e8523-837f-4d36-bf14-6bee2c344ef2/resourceGroups/web-rg-us2w/providers/Microsoft.Network/loadBalancers/web-server-us2w-lb/probes/web-server-us2w-lb-http-probe",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/791e8523-837f-4d36-bf14-6bee2c344ef2/resourceGroups/web-rg-us2w/providers/Microsoft.Network/loadBalancers/web-server-us2w-lb/loadBalancingRules/web-server-us2w-lb-http-rul"
            ],
            "loadbalancer_id": "/subscriptions/791e8523-837f-4d36-bf14-6bee2c344ef2/resourceGroups/web-rg-us2w/providers/Microsoft.Network/loadBalancers/web-server-us2w-lb",
            "name": "web-server-us2w-lb-http-probe",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Tcp",
            "resource_group_name": "web-rg-us2w"
          },
          "dependencies": [
            "module.location_us2w.azurerm_lb.web_server_lb",
            "module.location_us2w.azurerm_public_ip.web_server_lb_public_ip",
            "module.location_us2w.azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "module": "module.location_us2w",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "web_server_lb_http_rule",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/791e8523-837f-4d36-bf14-6bee2c344ef2/resourceGroups/web-rg-us2w/providers/Microsoft.Network/loadBalancers/web-server-us2w-lb/backendAddressPools/web-server-us2w-lb-backend-pool",
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "frontend_ip_configuration_id": "/subscriptions/791e8523-837f-4d36-bf14-6bee2c344ef2/resourceGroups/web-rg-us2w/providers/Microsoft.Network/loadBalancers/web-server-us2w-lb/frontendIPConfigurations/web-server-us2w-lb-frontend-ip",
            "frontend_ip_configuration_name": "web-server-us2w-lb-frontend-ip",
            "frontend_port": 80,
            "id": "/subscriptions/791e8523-837f-4d36-bf14-6bee2c344ef2/resourceGroups/web-rg-us2w/providers/Microsoft.Network/loadBalancers/web-server-us2w-lb/loadBalancingRules/web-server-us2w-lb-http-rul",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/791e8523-837f-4d36-bf14-6bee2c344ef2/resourceGroups/web-rg-us2w/providers/Microsoft.Network/loadBalancers/web-server-us2w-lb",
            "name": "web-server-us2w-lb-http-rul",
            "probe_id": "/subscriptions/791e8523-837f-4d36-bf14-6bee2c344ef2/resourceGroups/web-rg-us2w/providers/Microsoft.Network/loadBalancers/web-server-us2w-lb/probes/web-server-us2w-lb-http-probe",
            "protocol": "Tcp",
            "resource_group_name": "web-rg-us2w"
          },
          "dependencies": [
            "module.location_us2w.azurerm_lb.web_server_lb",
            "module.location_us2w.azurerm_lb_backend_address_pool.web_server_lb_backend_pool",
            "module.location_us2w.azurerm_lb_probe.web_server_lb_http_probe",
            "module.location_us2w.azurerm_public_ip.web_server_lb_public_ip",
            "module.location_us2w.azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "module": "module.location_us2w",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_server_nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/791e8523-837f-4d36-bf14-6bee2c344ef2/resourceGroups/web-rg-us2w/providers/Microsoft.Network/networkSecurityGroups/web-server-us2w-nsg",
            "location": "westus2",
            "name": "web-server-us2w-nsg",
            "resource_group_name": "web-rg-us2w",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP Inbound",
                "priority": 100,
                "protocol": "TCP",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "dependencies": [
            "module.location_us2w.azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "module": "module.location_us2w",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_server_nsg_rule_http",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/791e8523-837f-4d36-bf14-6bee2c344ef2/resourceGroups/web-rg-us2w/providers/Microsoft.Network/networkSecurityGroups/web-server-us2w-nsg/securityRules/HTTP Inbound",
            "name": "HTTP Inbound",
            "network_security_group_name": "web-server-us2w-nsg",
            "priority": 100,
            "protocol": "TCP",
            "resource_group_name": "web-rg-us2w",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": []
          },
          "dependencies": [
            "module.location_us2w.azurerm_network_security_group.web_server_nsg",
            "module.location_us2w.azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "module": "module.location_us2w",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_server_lb_public_ip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "capital-tf-2",
            "fqdn": "capital-tf-2.westus2.cloudapp.azure.com",
            "id": "/subscriptions/791e8523-837f-4d36-bf14-6bee2c344ef2/resourceGroups/web-rg-us2w/providers/Microsoft.Network/publicIPAddresses/web-server-us2w-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.229.57.123",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "web-server-us2w-public-ip",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "web-rg-us2w",
            "sku": "Basic"
          },
          "dependencies": [
            "module.location_us2w.azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "module": "module.location_us2w",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web_server_subnet",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "1.0.1.0/24",
            "id": "/subscriptions/791e8523-837f-4d36-bf14-6bee2c344ef2/resourceGroups/web-rg-us2w/providers/Microsoft.Network/virtualNetworks/web-server-us2w-vnet/subnets/web-server-us2w-subnet",
            "ip_configurations": [
              "/subscriptions/791e8523-837f-4d36-bf14-6bee2c344ef2/resourceGroups/web-rg-us2w/providers/Microsoft.Compute/virtualMachineScaleSets/web-server-us2w-scale-set/virtualMachines/0/networkInterfaces/web_server_network_profile/ipConfigurations/web",
              "/subscriptions/791e8523-837f-4d36-bf14-6bee2c344ef2/resourceGroups/web-rg-us2w/providers/Microsoft.Compute/virtualMachineScaleSets/web-server-us2w-scale-set/virtualMachines/2/networkInterfaces/web_server_network_profile/ipConfigurations/web"
            ],
            "name": "web-server-us2w-subnet",
            "network_security_group_id": "/subscriptions/791e8523-837f-4d36-bf14-6bee2c344ef2/resourceGroups/web-rg-us2w/providers/Microsoft.Network/networkSecurityGroups/web-server-us2w-nsg",
            "resource_group_name": "web-rg-us2w",
            "virtual_network_name": "web-server-us2w-vnet"
          },
          "dependencies": [
            "module.location_us2w.azurerm_network_security_group.web_server_nsg",
            "module.location_us2w.azurerm_resource_group.web_server_rg",
            "module.location_us2w.azurerm_virtual_network.web_server_vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "1.0.1.0/24",
            "id": "/subscriptions/791e8523-837f-4d36-bf14-6bee2c344ef2/resourceGroups/web-rg-us2w/providers/Microsoft.Network/virtualNetworks/web-server-us2w-vnet/subnets/web-server-us2w-subnet",
            "ip_configurations": [
              "/subscriptions/791e8523-837f-4d36-bf14-6bee2c344ef2/resourceGroups/web-rg-us2w/providers/Microsoft.Compute/virtualMachineScaleSets/web-server-us2w-scale-set/virtualMachines/0/networkInterfaces/web_server_network_profile/ipConfigurations/web",
              "/subscriptions/791e8523-837f-4d36-bf14-6bee2c344ef2/resourceGroups/web-rg-us2w/providers/Microsoft.Compute/virtualMachineScaleSets/web-server-us2w-scale-set/virtualMachines/2/networkInterfaces/web_server_network_profile/ipConfigurations/web"
            ],
            "name": "web-server-us2w-subnet",
            "resource_group_name": "web-rg-us2w",
            "virtual_network_name": "web-server-us2w-vnet"
          },
          "dependencies": [
            "module.location_us2w.azurerm_network_security_group.web_server_nsg",
            "module.location_us2w.azurerm_resource_group.web_server_rg",
            "module.location_us2w.azurerm_virtual_network.web_server_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.location_us2w",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "web_server_vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "1.0.0.0/22"
            ],
            "id": "/subscriptions/791e8523-837f-4d36-bf14-6bee2c344ef2/resourceGroups/web-rg-us2w/providers/Microsoft.Network/virtualNetworks/web-server-us2w-vnet",
            "location": "westus2",
            "name": "web-server-us2w-vnet",
            "resource_group_name": "web-rg-us2w",
            "subnet": [
              {
                "address_prefix": "1.0.1.0/24",
                "id": "/subscriptions/791e8523-837f-4d36-bf14-6bee2c344ef2/resourceGroups/web-rg-us2w/providers/Microsoft.Network/virtualNetworks/web-server-us2w-vnet/subnets/web-server-us2w-subnet",
                "name": "web-server-us2w-subnet",
                "security_group": "/subscriptions/791e8523-837f-4d36-bf14-6bee2c344ef2/resourceGroups/web-rg-us2w/providers/Microsoft.Network/networkSecurityGroups/web-server-us2w-nsg"
              }
            ]
          },
          "dependencies": [
            "module.location_us2w.azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    }
  ]
}